# exceptionales-therapy-scheduler

./: .gitignore  Dockerfile  Dockerfile.api  Makefile  README.md  package-lock.json  pyproject.toml  schedule.xlsx
config/: config.yaml
config/objectives/: default_objectives.yaml
data/schedule_params/: api_smoke_instance.json  sample_instance.json
infra/terraform/: .terraform.lock.hcl  README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
output/: last_request.json  schedule.json  schedule.xlsx
src/therapy_scheduler/: __init__.py  api.py  auth.py  data_loader.py  excel_writer.py  main.py  model.py  storage.py  time_utils.py
ui/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
ui/src/: App.tsx  index.css  main.tsx
ui/src/components/features/: login-dialog.tsx  run-model-panel.tsx
ui/src/components/features/entities/: availability-grid.tsx  entities-panel.tsx  specialty-select.tsx
ui/src/components/features/results/: results-panel.tsx
ui/src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  label.tsx  scroll-area.tsx  select.tsx  separator.tsx  sonner.tsx  table.tsx  tabs.tsx  textarea.tsx
ui/src/lib/: api.ts  auth.ts  schema.ts  state.ts  utils.ts
users/: example_entities.json  users.example.csv
users/text/: entities.json
